# new_command

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: colored_tests.rs
