[package]
name = "new_command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nls"
path = "src/bin/nls.rs"

[[bin]]
name = "nhistory"
path = "src/bin/nhistory.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2" # 命令终端多彩显示
chrono = "0.4" # 时间日期
users = "0.11.0"
libc = "0.2.151"
